scrollbar issue

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -61,6 +61,7 @@ body {
 
 main {
   overflow: hidden;
+  overflow-y: auto;
 }
 
 .container {
