--- a/src/style/sass/unique/_0_reset.sass
+++ b/src/style/sass/unique/_0_reset.sass
@@ -47,6 +47,7 @@ body
 
 main
 	overflow: hidden
+	overflow-y: auto
 
 .container
 	width: 100%
